--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -45,14 +45,16 @@ body{
     margin-top: 10px;
     padding-top: 10px;
 }
+
 .publish-tag-tab .label-info{
     margin-right: 10px;
+    white-space: normal;
 }
 
-.comment-menu{
-    display: block;
+.community-menu{
     color: #999;
     font-size: 13px;
+    margin-bottom: 15px;
 }
 .jumbotron{
     margin: 50px;
