--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,14 +25,14 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-xs-12">
-
+a
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
 
-            <div class="media" th:each="question : ${pagination.date}">
+            <div class="media" th:each="question : ${pagination.data}">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object img-roundedc"
+                        <img class="media-object img-rounded"
                              th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
